2002-03-20  Alex Larsson  <alexl@redhat.com>

	Patches from Carlo E. Prelz <fluido@fluido.as>
	Now gtkfb at least compiles and mostly works. The keyboard
	stuff needs more loving.
	
	* gdk/linux-fb/gdkkeyboard-fb.c (xlate_get_for_keyval,
	xlate_get_for_keycode, raw_get_for_keyval, raw_get_for_keycode):
	At least set the out parameters for these calls.

	* gdk/linux-fb/gdkmain-fb.c:
	(gdk_pointer_grab_info_libgtk_only, gdk_keyboard_grab_info_libgtk_only):
	Implement new functions.
	
Wed Mar 20 19:00:03 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_set_text): Short-circuit
	the text to the exact same thing, so we don't 
	unexpectedly change the selection or cursor position.
	(#74290, John Ellis.)

Thu Mar 21 00:05:14 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_get_background_area),
	(gtk_tree_view_get_cell_area): fix logic (fixes #74235, #73593)

Wed Mar 20 17:11:51 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.c: Patch from Richard Hestilow to fix
	gtk-font-name changes for widgets that get the actual
	default style. (#73709)

Wed Mar 20 22:59:23 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkrbtree.[ch]: add _gtk_rbtree_set_fixed_height()

	* gtk/gtktreeprivate.h: add fixed_height_check field

	* gtk/gtktreeview.c (gtk_tree_view_init): initialize
	scroll_sync_timer and fixed_height_check
	(do_validate_rows): add fixed_height_check. If all validated rows
	in the first cycle have the same height, then we set that height for
	the entire tree. This is some sort of 'fake' optimization, but helps
	a lot for the common case. We keep validating the entire tree in
	the background though.
	(gtk_tree_view_set_model): reset fixed_height_check

Wed Mar 20 16:36:08 2002  Owen Taylor  <otaylor@redhat.com>

        * gtk/*.c: Patch from Erwann Chenede, #73900 fixing
	a lot of warnings with Forte CC, mostly implicit
	casts between void * and function pointers.
	